# genie-transcript

./: .gitignore  README.md  pyproject.toml
genie_transcript/: cli.py  structurize.py
